--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <p class="title-list">Наш шорт-лист:</p>
 
             <div class="list">
-               <ol>
+               <ul>
                   <li><a  href="#programist">1. «Программист-прагматик»</a></li>
-                  <li><a href="#kod">2. «Чистый код. Создание, анализ и рефакторинг»<a></li>
+                  <li><a href="#kod">2. «Чистый код. Создание, анализ и рефакторинг»</a></li>
                   <li><a href="#sovershen-kod">3. «Совершенный код. Мастер-класс»</a></li>
                   <li><a href="#patern">4. «Паттерны объектно-ориентированного проектирования»</a></li>
                   <li><a href="#head-first">5. «Паттерны проектирования»</a></li>
                  
                   
-               </ol>
+               </ul>
             </div>
 
             <div  class="block-2">
