--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -288,7 +288,7 @@
 
           <div  class="block-7">
 
-            <h2 id="head-first" class="title-paragraf-7"> 6. «Шаблоны корпоративных приложений» (Signature Series)</h2>
+            <h2  class="title-paragraf-7"> 6. «Шаблоны корпоративных приложений» (Signature Series)</h2>
 
                <div class="text-block-7">
                
@@ -352,7 +352,7 @@
 
          </footer>
       </div>
-   </div>>
-</div>
+   </div>
+
 </body>
 </html>
